fixed h1 alignment

--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ h1 {
     font-family: poppins, Arial, Helvetica, sans-serif;
     color: rgb(255, 255, 255);
     font-size: clamp(1.5rem, 1.3vw + 1rem, 2.5rem);
+    text-align: center;
 }
 
 h2 {
